--- a/js_test.html
+++ b/js_test.html
@@ -6,39 +6,66 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Punk API</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
+
+    <script src="https://www.gstatic.com/firebasejs/4.10.0/firebase.js"></script>
+    <script>
+        // Initialize Firebase
+        var config = {
+            apiKey: "AIzaSyAl6h2TDLbhuqPvCcRenX7KVgvtPtJVUDE",
+            authDomain: "bringmybeerbro-a2b2e.firebaseapp.com",
+            databaseURL: "https://bringmybeerbro-a2b2e.firebaseio.com",
+            projectId: "bringmybeerbro-a2b2e",
+            storageBucket: "bringmybeerbro-a2b2e.appspot.com",
+            messagingSenderId: "787446559372"
+        };
+        firebase.initializeApp(config);
+
+    </script>
+
     <script>
         //      https://github.com/larsha/bolaget.io
         //      BreweryDB - API-key: 7c3c827d07c560a0ff836f3b889f32e8
 
-
         window.addEventListener("load", function() {
+            // Initialize Firebase
+            const db = firebase.database();
             let searchBeerBtn = document.getElementById("searchBeerBtn");
             let searchBeerInput = document.getElementById("searchBeerInput");
 
-            function printOut(db) {
+            let beerArray = [];
+
+            function printOut(beerDB) {
                 let container = document.getElementsByClassName("container")[0];
                 container.innerHTML = "";
-                for (let i = 0; i < db.length; i++) {
 
+
+                for (let i = 0; i < beerDB.length; i++) {
+                    //                        console.log(db[i].id)
                     let content = {
                         div: document.createElement("div"),
                         img: document.createElement("img"),
                         beerName: document.createElement("h2"),
                         tagline: document.createElement("h5"),
                         info: document.createElement("p"),
+                        favorite: document.createElement("button"),
                     }
 
                     content.div.setAttribute("class", "card-body beer");
-                    content.img.setAttribute("src", db[i].image_url);
+                    content.img.setAttribute("src", beerDB[i].image_url);
                     content.img.setAttribute("height", "140px");
-                    content.beerName.innerText = db[i].name;
-                    content.tagline.innerText = db[i].tagline;
-                    content.info.innerText = db[i].description;
+                    content.favorite.setAttribute("class", "btn btn-outline-light");
+                    content.favorite.setAttribute("id", beerDB[i].id);
+                    content.favorite.innerText = "Favorite";
+                    content.beerName.innerText = beerDB[i].name;
+                    content.tagline.innerText = beerDB[i].tagline;
+                    content.info.innerText = beerDB[i].description;
 
                     content.div.appendChild(content.img);
                     content.div.appendChild(content.beerName);
                     content.div.appendChild(content.tagline);
                     content.div.appendChild(content.info);
+                    content.div.appendChild(content.favorite);
 
                     container.appendChild(content.div);
                 }
@@ -46,15 +73,19 @@
 
             searchBeerBtn.addEventListener("click", function() {
                 let value = searchBeerInput.value;
-                console.log(value)
+                console.log(value);
                 fetch("https://api.punkapi.com/v2/beers?beer_name=" + value)
-                    .then(function(test) {
-                        return test.json();
+//                fetch("https://api.punkapi.com/v2/beers/random")
+                    .then(function(request) {
+                        return request.json();
                     })
                     .then(function(json) {
-                        let db = json;
-                        console.log(db);
-                        printOut(db);
+                        let beerDB = json;
+                        //                        console.log(db.length);
+                        for (let i = 0; i < beerDB.length; i++) {
+                            beerArray.push(beerDB[i]);
+                        }
+                        printOut(beerDB);
                     })
                     .catch(function(error) {
                         console.log(error);
@@ -62,6 +93,20 @@
             })
 
 
+            window.addEventListener("click", function(e) {
+                let toNumber = parseInt(e.target.id);
+                console.log(beerArray)
+                let beerObj = {}
+                for (let i = 0; i < beerArray.length; i++) {
+                    if (toNumber == beerArray[i].id) {
+                        beerObj.name = beerArray[i].name;
+                        beerObj.tagline = beerArray[i].tagline;
+                        beerObj.desc = beerArray[i].description;
+                        beerObj.img = beerArray[i].image_url;
+                        db.ref("users/carl/favorites/").push(beerObj);
+                    }
+                }
+            })
         })
 
     </script>
@@ -76,15 +121,19 @@
         .beer {
             margin: 0 auto;
             background-color: rgba(61, 100, 61, 0.7);
-/*            margin: 30px;*/
-            margin-top:30px;
+            margin-top: 30px;
             box-shadow: 5px 5px black;
             padding: 20px;
             width: 700px;
             height: auto;
         }
+
         .beer:last-child {
-            margin-bottom:30px;
+            margin-bottom: 30px;
+        }
+
+        .btn-outline-light {
+            float: right;
         }
 
     </style>
