--- a/untappd.html
+++ b/untappd.html
@@ -163,12 +163,12 @@
     </script>
     <style>
         body {
-            background: url(snow-restaurant-mountains-sky.png) no-repeat center center fixed;
+            background: url(1oelglas.jpg) no-repeat center center fixed;
             -webkit-background-size: cover;
             -moz-background-size: cover;
             -o-background-size: cover;
             background-size: cover;
-            background-color: rgba(0,0,0,0.5)
+            background-color: rgba(0,0,0, 1)
         }
 
         .arrowUp {
