--- a/untappd.html
+++ b/untappd.html
@@ -304,8 +304,10 @@
             left: 25vw;
             color: rgb(20,5,5);
         }
+        .hejsan {
+            display: none;
+        }
     </style>
-
 </head>
 
 <body>
@@ -317,9 +319,11 @@
             </a>
         </nav>
     </header>
+    
 <div class="searchTitle">
     <h1>Beers to bring</h1>
     </div>
+    
     <div class="searchField">
         <div class="searchbar">
             <input id="searchBeerInput" type="search" placeholder="Search for a beer">
