--- a/oelfavoriter.html
+++ b/oelfavoriter.html
@@ -288,7 +288,7 @@
         <nav class="navbar navbar-light bg-faded">
             <a class="navbar-brand" href="untappd.html">
 
-                <img src='beerLogo7.png' alt='logo' height="60" width="60" class="logotype">
+                <img src='./beerLogo7.png' alt='logo' height="60" width="60" class="logotype">
                 <h3>Bring My Beer Bro</h3>
             </a>
             <div id='profilePic'></div>
