--- a/oelfavoriter.html
+++ b/oelfavoriter.html
@@ -70,7 +70,7 @@
 
 
             //Hämtar hem alla produkter som finns på systembolaget
-            fetch("https://www.systembolaget.se/api/assortment/products/xml")
+            fetch("https://cors-anywhere.herokuapp.com/https://www.systembolaget.se/api/assortment/products/xml")
                 .then(function(requestProducts) {
                     return requestProducts.text();
                 })
@@ -84,7 +84,7 @@
                 })
 
             //Hämtar hem butiker och deras sortiment
-            fetch("https://www.systembolaget.se/api/assortment/stock/xml")
+            fetch("https://cors-anywhere.herokuapp.com/https://www.systembolaget.se/api/assortment/stock/xml")
                 .then(function(requestInStock) {
                     return requestInStock.text();
                 })
