--- a/oelfavoriter.html
+++ b/oelfavoriter.html
@@ -21,7 +21,7 @@
 <body>
     <div id = "popUp">
         <div id = "popUpContent">
-            <div id = "listOfCitiesContent">
+        <!-- <div id = "listOfCitiesContent">
                 <form id = "cities">
                     <input type="radio" name="city" value="Göteborg" id = "göteborg">Göteborg
                     <input type="radio" name="city" value="Lerum" id = "lerum">Lerum
@@ -33,6 +33,13 @@
                     <input type = "radio" name = "butik" value = "Solkatten" id = "solkatten">Solkatten
                 </form>
             </div>
+        -->
+        <select id = "listOfCounties">
+        </select>
+        <select id = "listOfCities">
+        </select>
+        <select id = "listOfStores">
+        </select>
         </div>
         <button id = "confirmButton">Välj</button>
     </div>
@@ -44,7 +51,6 @@
                 <h3>Bring My Beer Bro</h3>
             </a>
             <div id='profilePic'></div>
-            <button id = "popUpButton">Byt Butik</button>
             <div id = "currentStore">
                 <label id = "city"></label>
                 <label id = "store"></label>
@@ -53,6 +59,7 @@
     </header>
     <div class="favorites">
         <h1>Mina favoriter</h1>
+        <button id = "popUpButton">Byt Butik</button>
     </div>
 
     <br>
