added elasticlunr och tweak av soekning, wip

--- a/oelfavoriter.html
+++ b/oelfavoriter.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 
     <script type="text/javascript" src="xmltoJS/lib/xmlToJSON.js"></script>
-
+<script src="./elasticlunr/elasticlunr.js"></script> 
     <script src="./js_for_oelfavoriter.js"></script>
     
 
