Implenmented L-spinner on oelfavoriter + some css changes

--- a/untappd.html
+++ b/untappd.html
@@ -46,7 +46,7 @@
 
 
         <div class="loaderContainer">
-            <h1 class="loadText"> Loading beers . . .</h1>
+            <h1 class="loadText"> Signing in . .</h1>
             <div class="sk-folding-cube">
                 <div class="sk-cube1 sk-cube"></div>
                 <div class="sk-cube2 sk-cube"></div>
@@ -64,7 +64,7 @@
             </div>
         </div>
     </main>
-
+<footer></footer>
 </body>
 
 
