--- a/oelfavoriter.html
+++ b/oelfavoriter.html
@@ -34,12 +34,14 @@
                 </form>
             </div>
         -->
-        <select id = "listOfCounties">
-        </select>
-        <select id = "listOfCities">
-        </select>
-        <select id = "listOfStores">
-        </select>
+        <form id = "dropdowns">
+            <select id = "listOfCounties">
+            </select>
+            <select id = "listOfCities">
+            </select>
+            <select id = "listOfStores">
+            </select>
+        </form>
         </div>
         <button id = "confirmButton">Välj</button>
     </div>
