--- a/oelfavoriter.html
+++ b/oelfavoriter.html
@@ -19,23 +19,19 @@
 </head>
 
 <body>
-    <div id="popUp">
-        <div id="popUpContent">
-            <div id="listOfCitiesContent">
-                <form id="cities">
-                    <input type="radio" name="city" value="Göteborg" id="göteborg">Göteborg
-                    <input type="radio" name="city" value="Lerum" id="lerum">Lerum
-                </form>
-                <form id="storesGöteborg">
-                    <input type="radio" name="butik" value="Nordstan" id="nordstan">Nordstan
-                </form>
-                <form id="storesLerum">
-                    <input type="radio" name="butik" value="Solkatten" id="solkatten">Solkatten
-                </form>
-            </div>
+<div id = "popUp">
+        <div id = "popUpContent">
+        <form id = "dropdowns">
+            <select id = "listOfCounties">
+            </select>
+            <select id = "listOfCities">
+            </select>
+            <select id = "listOfStores">
+            </select>
+        </form>
         </div>
-        <button id="confirmButton">Välj</button>
-    </div>
+        <button id = "confirmButton">Välj</button>
+</div>
     <header>
         <nav class="navbar navbar-light bg-faded">
             <a class="navbar-brand" href="untappd.html">
