--- a/oelfavoriter.html
+++ b/oelfavoriter.html
@@ -23,6 +23,7 @@
         <div id = "popUpContent">
         <form id = "dropdowns">
             <select id = "listOfCounties">
+                <option style = "display:none"; selected>Välj län</option>
             </select>
             <select id = "listOfCities">
             </select>
