går att söka genom att klicka på enter

--- a/untappd.html
+++ b/untappd.html
@@ -32,7 +32,7 @@
                 </div>
             </div>
             <div class="searchTitle">
-                <h1>Beers to bring</h1>
+                <h1 id="beersToBring">Beers to bring</h1>
             </div>
 
         <div class="container card" id="main-wrapper">
