--- a/untappd.html
+++ b/untappd.html
@@ -32,19 +32,21 @@
                 </div>
             </div>
             <div class="searchTitle">
-                <h1>Beers to bring</h1>
+                <h1 id="beersToBring">Beers to bring</h1>
             </div>
-        <div id="showMoreBackground">
-            <button id="showMore" class="btn btn-outline-warning">more beers</button>
-        </div>
+
         <div class="container card" id="main-wrapper">
         </div>
+            
+            <div id="showMoreBackground">
+                <button id="showMore" class="btn btn-outline-warning">more beers</button>
+            </div>
 
         </div>
 
 
         <div class="loaderContainer">
-            <h1 class="loadText"> Loading beers . . .</h1>
+            <h1 class="loadText"> Signing in . .</h1>
             <div class="sk-folding-cube">
                 <div class="sk-cube1 sk-cube"></div>
                 <div class="sk-cube2 sk-cube"></div>
@@ -62,7 +64,7 @@
             </div>
         </div>
     </main>
-
+<footer></footer>
 </body>
 
 
