--- a/oelfavoriter.html
+++ b/oelfavoriter.html
@@ -29,6 +29,7 @@
             </select>
             <select id = "listOfStores">
             </select>
+            <div id = "popUpErrorMessage"></div>
         </form>
         </div>
         <button id = "confirmButton">Välj</button>
@@ -43,10 +44,11 @@
             <div id='profilePic'></div>
             <button id="popUpButton">Byt Butik</button>
             <div id="currentStore">
-                <label id="city"></label>
                 <label id="store"></label>
             </div>
         </nav>
+        <div id = "menuDiv" style = "top: 80px; right: 0;">
+        </div>
     </header>
     <div class="favorites">
         <h1>Mina favoriter</h1>
