--- a/oelfavoriter.html
+++ b/oelfavoriter.html
@@ -11,6 +11,8 @@
     <script type="text/javascript" src="xmltoJS/lib/xmlToJSON.js"></script>
     <script src="./elasticlunr/elasticlunr.js"></script>
     <script src="./js_for_oelfavoriter.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Muli" rel="stylesheet">
+
 
 
 
@@ -23,7 +25,7 @@
         <div id = "popUpContent">
         <form id = "dropdowns">
             <select id = "listOfCounties">
-                <option style = "display:none"; selected>Välj län</option>
+                <option style = "display:none"; selected>Choose county</option>
             </select>
             <select id = "listOfCities">
             </select>
@@ -31,7 +33,7 @@
             </select>
         </form>
         </div>
-        <button id = "confirmButton">Välj</button>
+        <button id = "confirmButton">Choose</button>
 </div>
     <header>
         <nav class="navbar navbar-light bg-faded">
@@ -41,29 +43,30 @@
                 <h3>Bring My Beer Bro</h3>
             </a>
             <div id='profilePic'></div>
-            <button id="popUpButton">Byt Butik</button>
+            <button id="popUpButton">Change store</button>
             <div id="currentStore">
                 <label id="city"></label>
                 <label id="store"></label>
             </div>
         </nav>
     </header>
-    <div class="favorites">
-        <h1>Mina favoriter</h1>
-    </div>
-
-    <br>
-    <div class="container card">
-
-    </div>
-        <div class="loaderContainer">
-            <div class="sk-folding-cube">
-                <div class="sk-cube1 sk-cube"></div>
-                <div class="sk-cube2 sk-cube"></div>
-                <div class="sk-cube4 sk-cube"></div>
-                <div class="sk-cube3 sk-cube"></div>
-            </div>
+    <main>
+        <div class="favorites">
+            <h1>My favorites</h1>
         </div>
+
+        <div class="container card">
+
+        </div>
+            <div class="loaderContainer">
+                <div class="sk-folding-cube">
+                    <div class="sk-cube1 sk-cube"></div>
+                    <div class="sk-cube2 sk-cube"></div>
+                    <div class="sk-cube4 sk-cube"></div>
+                    <div class="sk-cube3 sk-cube"></div>
+                </div>
+            </div>
+    </main>
     <footer></footer>
 
 </body>
