--- a/untappd.html
+++ b/untappd.html
@@ -7,7 +7,13 @@
     <title>Untappd API</title>
     <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
-    <link href="https://fonts.googleapis.com/css?family=Knewave" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Kalam" rel="stylesheet">
+    
+    <link href="https://fonts.googleapis.com/css?family=Muli" rel="stylesheet">
+    
+
+
+
     <script src="./js_for_untappd.js"></script>
     <script src="https://www.gstatic.com/firebasejs/4.10.0/firebase.js"></script>
 
