--- a/oelfavoriter.html
+++ b/oelfavoriter.html
@@ -42,14 +42,11 @@
                 <h3>Bring My Beer Bro</h3>
             </a>
             <div id='profilePic'></div>
-            <button id="popUpButton">Byt Butik</button>
-            <div id="currentStore">
-                <label id="store"></label>
-            </div>
         </nav>
         <div id = "menuDiv" style = "top: 80px; right: 0;">
         </div>
     </header>
+
     <div class="favorites">
         <h1>Mina favoriter</h1>
     </div>
@@ -66,7 +63,14 @@
                 <div class="sk-cube3 sk-cube"></div>
             </div>
         </div>
-    <footer></footer>
+    <footer>
+        <div id="currentStore">
+            <label id="store"></label>
+        </div>
+        <div id = "popUpDiv">
+            <button id="popUpButton">Byt Butik</button>
+        </div>
+    </footer>
 
 </body>
 
