--- a/untappd.html
+++ b/untappd.html
@@ -34,7 +34,7 @@
             <div class="searchField">
                 <div class="searchbar">
                     <input id="searchBeerInput" type="search" placeholder="Search for a beer">
-                    <button id="searchBeerBtn" class="btn btn-outline-warning">Search beer!</button>
+                    <button id="searchBeerBtn" class="btn btn-outline-warning">Search</button>
                 </div>
             </div>
             <div class="searchTitle">
