--- a/untappd.html
+++ b/untappd.html
@@ -52,7 +52,7 @@
 
 
         <div class="loaderContainer">
-            <h1 class="loadText"> Signing in . .</h1>
+            <h1 class="loadText"> Signing in</h1>
             <div class="sk-folding-cube">
                 <div class="sk-cube1 sk-cube"></div>
                 <div class="sk-cube2 sk-cube"></div>
