--- a/oelfavoriter.html
+++ b/oelfavoriter.html
@@ -70,7 +70,7 @@
             <label id="store"></label>
         </div>
         <div id = "popUpDiv">
-            <button id="popUpButton">Byt Butik</button>
+            <button id="popUpButton">Change Store</button>
         </div>
     </footer>
 
