More changes to popup

--- a/oelfavoriter.html
+++ b/oelfavoriter.html
@@ -31,7 +31,7 @@
             </select>
             <select id = "listOfStores">
             </select>
-            <div id = "popUpErrorMessage"></div>
+            <div id = "popUpMessage"></div>
         </form>
         </div>
         <button id = "confirmButton">Choose</button>
