--- a/untappd.html
+++ b/untappd.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css?family=Kalam" rel="stylesheet">
     
     <link href="https://fonts.googleapis.com/css?family=Muli" rel="stylesheet">
-    <link rel="shortcut icon" type="image/png" href="/favicon.png"/>
+    <link rel="shortcut icon" type="image/png" href="favicon.png"/>
     
 
 
