--- a/oelfavoriter.html
+++ b/oelfavoriter.html
@@ -12,7 +12,7 @@
     <script src="./elasticlunr/elasticlunr.js"></script>
     <script src="./js_for_oelfavoriter.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Muli" rel="stylesheet">
-    <link rel="shortcut icon" type="image/png" href="/favicon.png"/>
+    <link rel="shortcut icon" type="image/png" href="favicon.png"/>
 
 
 
