--- a/oelfavoriter.html
+++ b/oelfavoriter.html
@@ -7,6 +7,8 @@
     <title>Mmmmm beeer</title>
     <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Kalam" rel="stylesheet">
+
 
     <script type="text/javascript" src="xmltoJS/lib/xmlToJSON.js"></script>
     <script src="./elasticlunr/elasticlunr.js"></script>
