--- a/bmbb.html
+++ b/bmbb.html
@@ -38,7 +38,7 @@
                 </div>
             </div>
             <div class="searchTitle">
-                <h1 id="beersToBring">Beers to bring</h1>
+                <h1 id="beersToBring">Results for</h1>
             </div>
 
             <div class="container card" id="main-wrapper">
