Added background on small screen

--- a/beerfavorites.html
+++ b/beerfavorites.html
@@ -23,6 +23,7 @@
 </head>
 
 <body>
+    <img id = "background" src = "test.jpg"></img>
     <div id="popUp">
         <div id="popUpContent">
             <div id="popUpMessage"></div>
