--- a/bmbb.html
+++ b/bmbb.html
@@ -20,6 +20,7 @@
 </head>
 
 <body>
+    <img id = "background" src = "test.jpg"></img>
     <header>
         <nav class="navbar navbar-light bg-faded">
             <a class="navbar-brand" href="untappd.html">
