--- a/bmbb.html
+++ b/bmbb.html
@@ -23,7 +23,7 @@
     <img id = "background" src = "test.jpg"></img>
     <header>
         <nav class="navbar navbar-light bg-faded">
-            <a class="navbar-brand" href="untappd.html">
+            <a class="navbar-brand" href="bmbb.html">
 
                 <img src='./beerLogo7.png' alt='logo' height="60" width="60" class="logotype"> 
                 <h3>Bring My Beer Bro</h3>
