--- a/beerfavorites.html
+++ b/beerfavorites.html
@@ -23,7 +23,7 @@
 </head>
 
 <body>
-    <img id = "background" src = "test.jpg"></img>
+    <img id = "background" src = "test.jpg">
     <div id="popUp">
         <div id="popUpContent">
             <div id="popUpMessage"></div>
