--- a/bmbb.html
+++ b/bmbb.html
@@ -20,7 +20,7 @@
 </head>
 
 <body>
-    <img id = "background" src = "test.jpg"></img>
+    <img id = "background" src = "test.jpg">
     <header>
         <nav class="navbar navbar-light bg-faded">
             <a class="navbar-brand" href="bmbb.html">
