--- a/beerfavorites.html
+++ b/beerfavorites.html
@@ -72,7 +72,7 @@
             <label id="store"></label>
         </div>
         <div id="popUpDiv">
-            <button id="popUpButton">Change Store</button>
+            <button id="popUpButton"></button>
         </div>
     </footer>
 
